aggiunto vertical align botto su img per fix scritte con hover

--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,9 @@
 
 /* body */
 
-.col .img1, .col .img2 {
+.product .img1, .product .img2 {
     width: 100%;
+    vertical-align: bottom;
 }
 
 .description {
